Fix for footer on mobile or narrow screens

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5,15 +5,15 @@ html {
 
 body {
   background: #FFF;
-  margin-bottom: 45px;
 }
 
 footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
-  height: 45px;
   background-color: #eee;
+}
+
+body > div > .container {
+  padding-bottom:15px;
 }
 
 .footer .text-muted {
